--- a/RomanIntegerConverter/RomanIntegerConverterTests/RomanIntegerConverterTests.csproj
+++ b/RomanIntegerConverter/RomanIntegerConverterTests/RomanIntegerConverterTests.csproj
@@ -13,7 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RomanianIntegerConverter\RomanIntegerConverter.csproj" />
+    <ProjectReference Include="..\RomanIntegerConverter\RomanIntegerConverter.csproj" />
+    <ProjectReference Include="..\RomanIntegerConverter\RomanIntegerConverter.csproj" />
   </ItemGroup>
 
 </Project>
